# OpenAgora

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  ai-agent-era-engineering-v2.md  heartbeat-mechanism-design.md  kimi-export-session_-20260610-162117.md  nano-symphony-improvements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: go.yml  python.yml
.openclaw/: workspace-state.json
agent-arena/examples/veRL-SWE-agent/: README.md  demo.py
docker/: Dockerfile.agent-minimal  Dockerfile.cpu-trainer  Dockerfile.demo-agent  Dockerfile.server  Dockerfile.swe-agent  Dockerfile.vllm  agent-minimal.py  arena-install-lang  demo-agent.py  swe-agent-entrypoint.py
docs/: apply_verl_fixes.py  apply_verl_fixes.sh  architecture.md  getting-started.md  openagora-arch.json  rollout-efficiency.md  sandbox-contract.md  task-format.md  training-efficiency-plan.md  veRL-GPU-validation-plan-2x4090.md  veRL-PR.md
examples/code-colosseum/: README.md  docker-compose.yml
examples/code-colosseum/agent/: Dockerfile.agent  Dockerfile.claude-codex  Dockerfile.kimi  Dockerfile.opencode  claude_codex_llm.py  (+4 more)
examples/cookbook/: agent-skills.md  atif.md  computer-use.md  harbor-integration.md  langsmith.md  mcp-tools.md  multi-reward.md  registry-backends.md  reward-toml.md  simulated-user.md  wandb.md
examples/quickstart/: README.md  agent-local.py  mock_llm.py  run.sh  run_rollout.py  task-local.json  task.json
examples/relationship-chat-rl/: .gitignore  README.md  chat.py  deploy_to_ollama.py  docker-compose.yml  screenshot_dashboard.py  train_relationship_chat.py
examples/swe-agent/: BENCHMARK.md  README.md  benchmark.py  benchmark_results_dryrun.json  benchmark_results_golden.json  benchmark_results_llm_qwen25_3b.json  benchmark_results_tools_qwen25_3b.json  prepare_task.py  requirements.txt  run.sh  run_rollout.py  task.json
examples/veRL-SWE-agent/: README.md  demo.py  tools.json
examples/verl-integration/: README-cpu-demo.md  README.md  arena_agent_loop.yaml  arena_logger.yaml  demo_task.json  demo_token_reward.py  demo_train_step.py  docker-compose.cpu-demo.yml  docker-compose.vllm.yml  docker-compose.yml  download_model.py  mock_llm_add.py  mock_verl_agentloop.py  run_demo.py  train.py  train_cpu.py  train_grpo_arena.py  train_grpo_arena.sh  train_grpo_arena_2x4090.sh  train_grpo_arena_sync.py
go/: go.mod  go.sum
kimi-group-chat/Agent RL训练项目群/: Quickstart 体验反馈报告.md  Quickstart 验证报告 0608.md  memory.md  修复补丁.patch
kimi-group-chat/AgentLoop项目群/: memory.md
memory/: 2026-06-08.md
python/arena-sdk/: README.md  pyproject.toml
python/arena-sdk/src/arena/v1/: arena_pb2.py  arena_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py  trajectory_pb2.py  trajectory_pb2_grpc.py
python/arena-sdk/src/arena_sdk/: __init__.py  client.py
python/arena-sdk/src/openagora/v1/: arena_pb2.py  sandbox_pb2_grpc.py
python/arena-sdk/tests/: test_client.py
python/arena-verify/: README.md  pyproject.toml
python/arena-verify/src/arena_verify/: __init__.py  pytest_runner.py
python/arena-verify/tests/: test_placeholder.py
python/arena-verl/: README.md  pyproject.toml
python/arena-verl/src/arena_verl/: __init__.py  agent_loop.py  rollout.py  rollout_provider.py
python/arena-verl/tests/: test_agent_loop.py  test_e2e_verl.py  test_placeholder.py  test_rollout.py
python/openagora-cli/: README.md  pyproject.toml
python/openagora-cli/src/openagora_cli/: main.py
python/openagora-cli/src/openagora_cli/agents/: base.py  registry.py
python/openagora-cli/src/openagora_cli/agents/installed/: claude_code.py  codex_cli.py  openhands.py
python/openagora-cli/src/openagora_cli/harbor/: __init__.py  backend.py  client.py
python/openagora-cli/src/openagora_cli/plugins/: base.py  langsmith.py  manager.py  wandb.py
python/openagora-cli/src/openagora_cli/registry/: builtin.json  models.py  registry.py
python/openagora-cli/src/openagora_cli/registry/backends/: __init__.py  base.py  github.py  local.py  url.py
python/openagora-cli/src/openagora_cli/task/: config.py  loader.py
python/openagora-cli/src/openagora_cli/trajectory/: __init__.py  atif.py
python/openagora-cli/tests/: test_agents.py  test_atif.py  test_harbor.py  test_plugins.py  test_registry.py  test_task_loader.py
python/openagora-cli/tests/fixtures/hello-world/: task.toml
python/openagora-sdk/: README.md  pyproject.toml
python/openagora-sdk/src/openagora/: __init__.py
python/openagora-sdk/src/openagora/v1/: arena_pb2.py  arena_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py  trajectory_pb2.py  trajectory_pb2_grpc.py
python/openagora-sdk/src/openagora_sdk/: __init__.py  client.py  rollout.py  trajectory.py  types.py
python/openagora-sdk/tests/: test_client.py
python/openagora-verify/: README.md  pyproject.toml
python/openagora-verl/: README.md  pyproject.toml
python/openagora-verl/src/openagora_verl/: __init__.py  _patch_tq.py  agent_loop.py  logger.py  rollout.py  rollout_provider.py  utils.py
python/openagora-verl/src/openagora_verl/transfer_queue/: __init__.py  _client.py  _storage.py  _tensor_layout.py
python/openagora-verl/tests/: test_agent_loop.py  test_logger.py  test_no_monkey_patch.py  test_placeholder.py  test_rollout.py  test_transfer_queue_client.py  test_transfer_queue_layout.py  test_utils.py
scripts/: capture_dashboard.py
skills/kimi-webbridge-desktop/: .bundle-version
skills/kimiim/: SKILL.md.fingerprint
skills/time-awareness/: SKILL.md.fingerprint
skills/worker-safety/: SKILL.md.fingerprint
(+195 files in other folders)
