[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena-verify"
version = "0.1.0"
description = "Arena verification plugins (pytest runner)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arena_verify"]
