[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena-verl"
version = "0.1.0"
description = "veRL adapter for Arena rollout provider"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "arena-sdk>=0.1.0",
    "numpy",
    "torch",
    "transformers",
    "tensordict",
    "verl",
]

[project.optional-dependencies]
verl = [
    "tensordict>=0.10.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arena_verl"]

[tool.uv.sources]
arena-sdk = { path = "../arena-sdk" }
verl = { git = "https://github.com/volcengine/verl.git" }
