[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagora-sdk"
version = "0.1.0"
description = "Arena SDK — Python client for OpenAgora"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.64.0",
    "protobuf>=5.0.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.64.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openagora_sdk", "src/openagora"]
