[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagora-verl"
version = "0.1.0"
description = "veRL adapter for OpenAgora rollout provider"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["arena", "verl", "rl", "llm", "agent", "rollout"]
dependencies = [
    "openagora-sdk>=0.1.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
# Heavy dependencies needed for the full veRL integration. Install veRL
# separately from https://github.com/volcengine/verl.git; the adapter detects
# it at runtime and falls back to standalone mocks when veRL is not present.
verl = [
    "numpy>=1.26",
    "torch>=2.0.0",
    "tensordict>=0.10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/albert-lv/OpenAgora"
Repository = "https://github.com/albert-lv/OpenAgora"
Documentation = "https://github.com/albert-lv/OpenAgora/tree/main/python/openagora-verl"

[tool.hatch.build.targets.wheel]
packages = ["src/openagora_verl"]

[tool.uv.sources]
openagora-sdk = { path = "../openagora-sdk" }
